--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Estilos Gerais */
 body {
-    background-color: #141414; /* Cor de fundo escura da Netflix */
-    color: #5c1374; /* Cor do texto branca */
+    background-color: #5c1374; /* Cor de fundo escura da Netflix */
+    color: #FFE134; /* Cor do texto branca */
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
