--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Estilos Gerais */
 body {
-    background-color: #5c1374; /* Alterado para o seu tom de roxo */
+    background-color: #4A148C; /* Alterado para o seu tom de roxo */
     color: #FFE134;            /* Alterado para o seu tom de amarelo */
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 0;
