--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Estilos Gerais */
 body {
     background-color: #4A148C; /* Alterado para o seu tom de roxo */
-    color: #FFE134;            /* Alterado para o seu tom de amarelo */
+    color: #FFFF00;            /* Alterado para o seu tom de amarelo */
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
